# zero-shot-cost-estimation

./: .gitignore  Notes.md  README.md  dbgensetup.py  docker-compose.yml  pyproject.toml  requirements.txt  run_benchmark.py  train.py
cross_db_benchmark/benchmark_tools/: column_types.py  create_fk_indexes.py  database.py  generate_column_stats.py  generate_string_statistics.py  generate_workload.py  load_database.py  parse_run.py  run_workload.py  scale_in_db.py  utils.py
cross_db_benchmark/benchmark_tools/postgres/: combine_plans.py  database_connection.py  inflate_cardinality_errors.py  parse_filter.py  parse_plan.py  plan_operator.py  run_workload.py  utils.py
cross_db_benchmark/meta_tools/: download_relational_fit.py  inflate_cardinality_errors.py  scale_dataset.py
data/datasets/: datasets.py
data/datasets/accidents/schema_sql/: postgres.sql
data/datasets/airline/dataset_documentation/: README.md  script.py
data/datasets/airline/schema_sql/: postgres.sql
data/datasets/baseball/schema_sql/: postgres.sql
data/datasets/basketball/schema_sql/: postgres.sql
data/datasets/imdb_full/: schema.json
data/helpers/: data_loader.py  download_datasets.py
data_driven_cardinalities/deepdb/: requirements.txt
data_driven_cardinalities/deepdb/aqp_spn/: aqp_leaves.py
data_driven_cardinalities/deepdb/evaluation/: augment_cards.py
data_driven_cardinalities/deepdb/exp_scripts/: training.py
data_driven_cardinalities/deepdb/rspn/: rspn.py
data_driven_cardinalities/deepdb/schemas/: generate_schema.py
models/dataset/: dataset_creation.py  plan_dataset.py
models/dataset/plan_graph_batching/: plan_batchers.py  postgres_plan_batching.py
models/preprocessing/: feature_statistics.py
models/training/: checkpoint.py  metrics.py  train.py  utils.py
models/zero_shot_models/: zero_shot_model.py
models/zero_shot_models/specific_models/: model.py  postgres_zero_shot.py
models/zero_shot_models/utils/: activations.py  embeddings.py  fc_out_model.py  losses.py  node_type_encoder.py
setup/postgres/: run_workload_commands.py
(+28 files in other folders)
