[project]
name = "zero-shot-cost-estimation"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "absl-py",
    "dataclasses>=0.6",
    "dgl",
    "filelock",
    "func-timeout",
    "gensim",
    "glog",
    "jupyter",
    "lightgbm",
    "mako",
    "matplotlib>=3.8.4",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "optuna",
    "osfclient",
    "pandas>=2.2.2",
    "paramiko",
    "psycopg2-binary",
    "pyarrow",
    "pytest>=8.1.1",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
    "scp",
    "seaborn",
    "tabulate",
    "torch",
    "torchvision",
    "tqdm>=4.66.2",
    "yapf",
    "arff>=0.9",
    "asn1crypto>=1.5.1",
    "atomicwrites>=1.4.1",
    "attrs>=23.2.0",
    "bloom-filter>=1.3.3",
    "certifi>=2024.2.2",
    "cffi>=1.16.0",
    "chardet>=5.2.0",
    "cloudpickle>=3.0.0",
    "colorama>=0.4.6",
    "cryptography>=42.0.5",
    "cycler>=0.12.1",
    "decorator>=5.1.1",
    "ete3>=3.1.3",
    "idna>=3.7",
    "jeepney>=0.8.0",
    "joblib>=1.4.0",
    "keyring>=25.1.0",
    "keyrings-alt>=5.0.1",
    "kiwisolver>=1.4.5",
    "lark-parser>=0.12.0",
    "locket>=1.0.0",
    "mock>=5.1.0",
    "more-itertools>=10.2.0",
    "mpmath>=1.3.0",
    "numexpr>=2.10.0",
    "packaging>=24.0",
    "patsy>=0.5.6",
    "setuptools>=69.5.1",
    "pluggy>=1.5.0",
    "py>=1.11.0",
    "pycparser>=2.22",
    "pydot>=2.0.0",
    "pyparsing>=3.1.2",
    "pyqt5>=5.15.10",
    "pyqt5-sip>=12.13.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.1",
    "secretstorage>=3.3.3",
    "six>=1.16.0",
    "sqlparse>=0.5.0",
    "statsmodels>=0.14.2",
    "sympy>=1.12",
    "tables>=3.9.2",
    "wcwidth>=0.2.13",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zero_shot_cost_estimation"]
